修复ä¸ää¸小问题

--- a/src/style.css
+++ b/src/style.css
@@ -17,9 +17,6 @@ a {
   text-decoration: none;
   color: inherit;
 }
-body {
-  background-color: #eee;
-}
 
 .globalHeader {
   margin: 20px;
@@ -37,13 +34,23 @@ body {
   width: 100%;
   margin-right: 10px;
   height: 40px;
-  padding: 0 10px;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  background: rgba(255,255,255,0.8);
+  /**/
+  flex-basis: 100%;
+  border-radius: 20px;
+  min-height: 40px;
+  padding-left: 35px;
+  outline:none;
+  /*opacity: 0.7;*/
+}
+.searchForm > input:hover {
+  box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
+  border-color: rgba(223, 225, 229, 0);
 }
 @media (min-width: 500px) {
   .searchForm {
-    max-width: 400px;
+    max-width: 500px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -52,10 +59,17 @@ body {
   white-space: nowrap;
   padding: 0 28px;
   border: none;
-  border-radius: 4px;
+  border-radius: 20px;
   background: #0282b9;
   color: white;
   font-size: 16px;
+  display: none;
+  opacity: 0.8;
+}
+@media (max-width: 500px) {
+  .searchForm > button {
+    display: block;
+  }
 }
 .globalMain {
   max-width: 900px;
@@ -86,6 +100,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  opacity:0.7;
 }
 @media (min-width: 500px) {
   .siteList {
@@ -164,4 +179,10 @@ body {
   flex-direction: column;
   border: 1px #ddd solid;
   border-radius: 4px;
+}
+
+
+body {
+  background: no-repeat url(https://api.ixiaowai.cn/gqapi/gqapi.php);
+  background-attachment: fixed;
 }
